style: use visibility to prevent text shifting

--- a/src/components/Header/_header.scss
+++ b/src/components/Header/_header.scss
@@ -421,7 +421,7 @@
 
   &.--is-loading {
     .#{$prefix}--side-nav__icon {
-      display: none;
+      visibility: hidden;
     }
   }
 
